--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "swaggering-mongoose",
-  "version": "0.3.2",
+  "version": "0.3.3",
   "description": "Generate mongoose schemas and models from Swagger documents",
   "main": "./lib/index.js",
   "directories": {
@@ -14,8 +14,8 @@
     "bson": "^2.0.2",
     "chai": "^2.2.0",
     "mocha": "^2.2.1",
-    "mockgoose": "^1.10.7",
-    "mongoose": ">=4.0.1"
+    "mockgoose": "8.0.4",
+    "mongoose": "*"
   },
   "scripts": {
     "test": "node_modules/mocha/bin/mocha"
