--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "swaggering-mongoose",
   "version": "0.4.1",
+  "engines": {
+    "node": ">=7.6"
+  },
   "description": "Generate mongoose schemas and models from Swagger documents",
   "main": "./lib/index.js",
   "directories": {
